nav bar spacing fixed

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ h2 {
     justify-content: space-evenly;
 }
 
-.hamburger {
+.hamburger-div {
     display: none;
 }
 
